@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
     - Fixed some typos and organization of documentation
     - Ensured all code was run through perltidy
     - Get rid of TravisCI config
+    - Add some more guidance about not using this module
 
 1.210     2022-01-10
     - Update to Starter::Git and clean up the dist.ini file
